--- a/src/components/mds/abstract.mdx
+++ b/src/components/mds/abstract.mdx
@@ -1,4 +1,4 @@
 # Abstract
 <div style={{ textAlign: "justify" }}>
-We introduce Genie Envisioner (GE), a unified world foundation platform for real-world dual-arm robotic manipulation, leveraging video generation to enable perception, control, simulation, and evaluation of physically grounded behaviors. The core of GE is GE-Base, a large-scale instruction-conditioned video generative model trained on over one million real-world dual-arm manipulation sequences from the AgiBot-World-Beta dataset, totaling 2,967 hours of multi-view footage. GE-Base captures the spatial, temporal, and semantic patterns of robot-environment interactions, enabling controllable, instruction-aligned video synthesis across various tasks and environments. To connect perception with action, we introduce GE-Act, a lightweight world action model that decodes action policies from the latent space of GE-Base using a unified flow-matching framework. GE-Sim, a video-based neural simulator, embeds these models within a closed generative loop, enabling real-time policy simulation and robust offline evaluation. To evaluate the generated video’s quality, we propose GE-Bench, a benchmark suite assessing visual fidelity, temporal coherence, and instruction-action consistency for real-world tasks. Extensive real-world evaluations demonstrate GE’s effectiveness. GE-Base excels in high-fidelity, temporally consistent, and instruction-aligned multi-view video generation, surpassing both general video generation models and world models on GE-Bench in visual consistency and grounding. Built on GE-Base, GE-Act achieves robust manipulation performance, executing precise, instruction-conditioned actions on physical robots. Across a wide range of real-world dual-arm tasks, GE-Act consistently outperforms state-of-the-art VLA baselines, excelling in both standard and latency-sensitive scenarios. Notably, GE-Act also demonstrates strong cross-embodiment generalization, transferring effectively to novel robotic platforms with minimal adaptation data, maintaining high performance across structurally diverse embodiments. These results highlight GE as a unified foundation for real-world, general-purpose embodied intelligence, showcasing its ability to handle complex manipulation tasks and adapt to new platforms.
+We introduce Genie Envisioner (GE), a unified world foundation platform for robotic manipulation, leveraging video generation to enable the generation, control, simulation, and evaluation of embodied behaviors. At its core is GE-Base, a large-scale instruction-conditioned video generative model trained on over 1M real-world manipulation sequences from the AgiBot-World-Beta dataset. GE-Base captures spatial, temporal, and semantic patterns of robot-environment interactions, enabling instruction-aligned video synthesis across diverse tasks. To bridge with action, we introduce GE-Act, a lightweight flow-matching world action model that decodes action policies from GE-Base’s latent space. Additionally, GE-Sim, a video-based neural simulator, enables real-time policy simulation in a closed-loop setup. We propose GE-Bench, a benchmark suite for evaluating video quality in real-world tasks, focusing on visual fidelity, temporal coherence, and instruction-action consistency. 
 </div>
