--- a/src/components/mds/abstract.mdx
+++ b/src/components/mds/abstract.mdx
@@ -1,4 +1,7 @@
-# Abstract
+
 <div style={{ textAlign: "justify" }}>
-We introduce Genie Envisioner (GE), a unified world foundation platform for robotic manipulation, leveraging video generation to enable the generation, control, simulation, and evaluation of embodied behaviors. At its core is GE-Base, a large-scale instruction-conditioned video generative model trained on over 1M real-world manipulation sequences from the AgiBot-World-Beta dataset. GE-Base captures spatial, temporal, and semantic patterns of robot-environment interactions, enabling instruction-aligned video synthesis across diverse tasks. To bridge with action, we introduce GE-Act, a lightweight flow-matching world action model that decodes action policies from GE-Base’s latent space. Additionally, GE-Sim, a video-based neural simulator, enables real-time policy simulation in a closed-loop setup. We propose GE-Bench, a benchmark suite for evaluating video quality in real-world tasks, focusing on visual fidelity, temporal coherence, and instruction-action consistency. 
+<p>We introduce <strong style="color:blue;">Genie Envisioner (GE)</strong>, a <strong style="color:blue;">unified world-model framework</strong> designed to learn and evaluate robotic manipulation policies through a single generative loop. At its core, <strong style="color:blue;">GE-Base</strong> is an instruction-conditioned, multi-view video diffusion model trained on over <strong style="color:blue;">1 million real episodes</strong> from the <strong style="color:blue;">AgiBot-World-Beta dataset</strong>. It generates latent trajectories that predict both scene dynamics and plausible robot actions.</p>
+<p><strong style="color:blue;">GE-Act</strong>, built in parallel with the foundation model, incorporates a <strong style="color:blue;">flow-matching action expert</strong> to map these latents to <strong style="color:blue;">torque commands</strong> (54 continuous action steps) within <strong style="color:blue;">200 ms</strong> on <strong style="color:blue;">commodity GPUs</strong>. <strong style="color:blue;">GE-Act adapts quickly</strong>, requiring only <strong style="color:blue;">1 hour of demonstrations</strong> to transfer to novel embodiments such as <strong style="color:blue;">Franka</strong> and <strong style="color:blue;">AgileX Cobot</strong>, outperforming task-specific baselines. The same underlying dynamics are leveraged by <strong style="color:blue;">GE-Sim</strong>, a <strong style="color:blue;">neural simulator</strong> capable of producing <strong style="color:blue;">thousands of closed-loop rollouts</strong> per hour on a <strong style="color:blue;">distributed cluster</strong>, providing an efficient evaluation solution and a <strong style="color:blue;">cost-effective reinforcement-learning sampling strategy</strong>.</p>
+<p><strong style="color:blue;">GE-Bench</strong> rounds out the platform by offering comprehensive evaluation metrics, including <strong style="color:blue;">visual fidelity</strong>, <strong style="color:blue;">physical consistency</strong>, and <strong style="color:blue;">instruction-action alignment</strong>. Together, these components make <strong style="color:blue;">GE</strong> a <strong style="color:blue;">scalable</strong>, <strong style="color:blue;">practical foundation</strong> for <strong style="color:blue;">general-purpose robotic manipulation</strong>. <strong style="color:blue;">Code</strong>, pretrained weights, and <strong style="color:blue;">GE-Bench</strong> will be made available upon publication.</p>
+
 </div>
