--- a/src/components/mds/abstract.mdx
+++ b/src/components/mds/abstract.mdx
@@ -1,5 +1,8 @@
 
 <div style={{ textAlign: "justify" }}>
-We introduce <strong style="color:blue;">Genie Envisioner (GE)</strong>, a <strong style="color:blue;">unified world-model framework</strong> designed to learn and evaluate robotic manipulation policies through a single generative loop. At its core, <strong style="color:blue;">GE-Base</strong> is an instruction-conditioned, multi-view video diffusion model trained on over <strong style="color:blue;">1 million real episodes</strong> from the <strong style="color:blue;">AgiBot-World-Beta dataset</strong>. It generates latent trajectories that predict both scene dynamics and plausible robot actions. <strong style="color:blue;">GE-Act</strong>, built in parallel with the foundation model, incorporates a <strong style="color:blue;">flow-matching action expert</strong> to map these latents to <strong style="color:blue;">torque commands</strong> (54 continuous action steps) within <strong style="color:blue;">200 ms</strong> on <strong style="color:blue;">commodity GPUs</strong>. <strong style="color:blue;">GE-Act adapts quickly</strong>, requiring only <strong style="color:blue;">1 hour of demonstrations</strong> to transfer to novel embodiments such as <strong style="color:blue;">Franka</strong> and <strong style="color:blue;">AgileX Cobot</strong>, outperforming task-specific baselines. The same underlying dynamics are leveraged by <strong style="color:blue;">GE-Sim</strong>, a <strong style="color:blue;">neural simulator</strong> capable of producing <strong style="color:blue;">thousands of closed-loop rollouts</strong> per hour on a <strong style="color:blue;">distributed cluster</strong>, providing an efficient evaluation solution and a <strong style="color:blue;">cost-effective reinforcement-learning sampling strategy</strong> <strong style="color:blue;">GE-Bench</strong> rounds out the platform by offering comprehensive evaluation metrics, including <strong style="color:blue;">visual fidelity</strong>, <strong style="color:blue;">physical consistency</strong>, and <strong style="color:blue;">instruction-action alignment</strong>. Together, these components make <strong style="color:blue;">GE</strong> a <strong style="color:blue;">scalable</strong>, <strong style="color:blue;">practical foundation</strong> for <strong style="color:blue;">general-purpose robotic manipulation</strong>. <strong style="color:blue;">Code</strong>, pretrained weights, and <strong style="color:blue;">GE-Bench</strong> will be made available upon publication.
+<p>
+We introduce <strong style="color:#5DB3E6;">Genie Envisioner (GE)</strong>, a <span style="color:#5DB3E6;">unified world-model framework</span> that learns and evaluates robotic manipulation policies in a single generative loop. The core, <strong style="color:#5DB3E6;">GE-Base</strong>, is an instruction-conditioned, multi-view video diffusion model trained on over 1 million real episodes from the AgiBot-World-Beta corpus, yielding latent trajectories that forecast both scene dynamics and plausible robot actions. <strong style="color:#5DB3E6;">GE-Act</strong> incorporates a flow-matching action expert in parallel with the foundation model, mapping latents to torque commands (54 continuous action steps) in 200 ms on commodity GPUs, and adapts within <strong>1 hour</strong> to novel embodiments such as Franka and AgileX Cobot, matching or exceeding task-specific baselines. <strong style="color:#5DB3E6;">GE-Sim</strong>, an action-conditioned neural simulator, produces thousands of closed-loop rollouts per hour on a distributed cluster, offering cost-effective evaluation and high-throughput policy sampling. <strong style="color:#5DB3E6;">GE-Bench</strong> completes the platform with metrics for visual fidelity, physical consistency, and instruction–action alignment. Together, these components make <strong>GE</strong> a scalable foundation for general-purpose robotic manipulation. Code, pretrained weights, and GE-Bench will be released upon publication.
+</p>
+
 
 </div>
